--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">StringResource26112019</string>
+    <string name="label_title">Đăng nhập hệ thống</string>
+    <string name="label_account">Nhập tài khoản</string>
+    <string name="label_password">Nhập mật khẩu</string>
+    <string name="label_login">Đăng nhập</string>
 </resources>
