--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,6 @@
     <string name="label_login">Login</string>
     <string name="label_password">Input password</string>
     <string name="label_title">Login System</string>
+    <string name="label_show_account">"Account name : "</string>
+    <string name="label_show_password">"Password : "</string>
 </resources>
